--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ management.endpoints.web.exposure.include=mappings
 #FakeStoreAPI configurations
 fakestore.api.base.url = https://fakestoreapi.com
 fakestore.api.product.path = /products
-fakestore.api.category.path = /category
+fakestore.api.cart.for.user.path = /carts?userId=
