--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.application.name=EcomProductServiceDec23
+spring.application.name=EcomProductServiceBackEnd
 management.endpoints.web.exposure.include=mappings
 
 #FakeStoreAPI configurations
 fakestore.api.base.url = https://fakestoreapi.com
 fakestore.api.product.path = /products
+fakestore.api.category.path = /category
 fakestore.api.cart.for.user.path = /carts?userId=
+
+#DateConnection
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.show-sql=true
+spring.datasource.url= jdbc:mysql://localhost:3306/EcomProductService
+spring.datasource.username= root
+spring.datasource.password= Nithin@9700
