--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ fakestore.api.cart.for.user.path = /carts?userId=
 
 #DateConnection
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.show-sql=true
 spring.datasource.url= jdbc:mysql://localhost:3306/EcomProductService
