Integrated ECom and Authuntication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.application.name=EcomProductServiceBackEnd
 management.endpoints.web.exposure.include=mappings
+server.port= 8080
 
 #FakeStoreAPI configurations
 fakestore.api.base.url = https://fakestoreapi.com
 fakestore.api.product.path = /products
 fakestore.api.category.path = /category
 fakestore.api.cart.for.user.path = /carts?userId=
+
+#Third-Party application Authentication
+userAuthentication.api.base.url = http://localhost:8081/user
+userAuthentication.api.validate = /validate
+
+
 
 #DateConnection
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
