--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.show-sql=true
-spring.datasource.url= jdbc:mysql://localhost:3306/EcomProductService
-spring.datasource.username= root
-spring.datasource.password= Nithin@9700
+spring.datasource.url= ${JDBC_URL}
+spring.datasource.username= ${user_name}
+spring.datasource.password=${password}
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
