updated application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=EcomProductServiceBackEnd
 management.endpoints.web.exposure.include=mappings
-server.port= 8080
+server.port= ${SERVER_PORT}
 
 #FakeStoreAPI configurations
 fakestore.api.base.url = https://fakestoreapi.com
@@ -15,7 +15,6 @@ userAuthentication.api.validate = /validate
 
 
 #DateConnection
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.show-sql=true
